# rust-template

./: .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Makefile  README.md  deny.toml
abi/: Cargo.toml  build_opts.json
abi/src/: error.rs  lib.rs
abi/src/pb/: abi_impl.rs  gen.rs  mod.rs
assets/: Cargo.toml  README.md
assets/src/: lib.rs
errors/: Cargo.toml  README.md
errors/src/: lib.rs
fixtures/: Cargo.toml  README.md
macros/: Cargo.toml  README.md
macros/src/: lib.rs
network/: Cargo.toml
protobuf/: README.md  api.proto  common.proto  config.proto  error.proto  state.proto
test-utils/: Cargo.toml  README.md
utils/: Cargo.toml  README.md
