[package]
name = "abi"
version = "0.1.0"
authors = ["Tyr Chen <tyr.chen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
prost = "0.7"
prost-helper = "0.4"
prost-types = "0.7"
serde = { version = "1", features = ["derive"] }
thiserror = "1"

macros = { path = "../macros" }

[dev-dependencies]
anyhow = "1"
serde_json = "1"

fixtures = { path = "../fixtures" }

[build-dependencies]
prost-serde = "0.2"
