[package]
name = "errors"
version = "0.1.0"
authors = ["Tyr Chen <tyr.chen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.7"
thiserror = "1"

abi = { path = "../abi" }
macros = { path = "../macros" }
