[package]
name = "network"
version = "0.1.0"
authors = ["Tyr Chen <tyr.chen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi = { path = "../abi" }
errors = { path = "../errors" }
utils = { path = "../utils" }

[dev-dependencies]
test-utils = { path = "../test-utils" }
