[package]
name = "test-utils"
version = "0.1.0"
authors = ["Tyr Chen <tyr.chen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mockito = "0.29"

abi = { path = "../abi" }
fixtures = { path = "../fixtures" }
utils = { path = "../utils" }
